--- a/views/deviceadd.ejs
+++ b/views/deviceadd.ejs
@@ -7,31 +7,86 @@
     <input class="form-control" type="text" name="device[name]" placeholder="name of device">
     </div>
     <div class="form-group">
-    <input class="form-control" type="text" name="device[onecno]" placeholder="1c no">
+    <input class="form-control" type="number" name="device[onecid]" placeholder="1c no" required>
     </div>
-    <div class="form-group">
-    <input class="form-control" type="text" name="device[owner]" placeholder= "Owner of the device">
-    </div>
+
     <div class="input-group mb3 form-group ">
         <div class="input-group-prepend">
             <label class="input-group-text" for="inputGroupSelect01">Used By</label>
         </div>
         
-            <select class="form-group custom-select" id="inputGroupSelect01" name="device[usedby]">
-                <%user.forEach(function(user){%>
-                    <option value=<%=user._id%>><%=user.name%></option>      
+            <select class="form-group custom-select" id="inputGroupSelect01" name="device[owner]">
+                <%owner.forEach(function(owner){%>
+                    <option value=<%=owner._id%>><%=owner.name%></option>      
                 <%})%>
               
         
             </select>
         
     </div>
-    <div class="form-group">
-    <input class="form-control" type="text" name="device[txnno]" placeholder="txn no">
+    
+<!--INWAREHOUSE-->
+    
     </div>
-    <div class="form-group">
-    <input class="form-control" name="device[type]" placeholder="txntype">
+    
+        <div class="input-group mb3 form-group ">
+        <div class="input-group-prepend">
+            <label class="input-group-text" for="inputGroupSelect02">Present In</label>
+        </div>
+        
+            <select class="form-group custom-select" id="inputGroupSelect02" name="device[inwarehouse]">
+                
+                    <option value="wh">WH</option>
+                    <option value="rma">RMA</option>
+                    
+               
+              
+        
+            </select>
+        
     </div>
+    
+ <!--WORKING STATUS   -->
+ 
+    
+    <div class="input-group mb3 form-group ">
+        <div class="input-group-prepend">
+            <label class="input-group-text" for="inputGroupSelect03">Working Status</label>
+        </div>
+        
+            <select class="form-group custom-select" id="inputGroupSelect03" name="device[working]">
+                
+                    <option value="true">Working</option>
+                    <option value="false">Not Working</option>
+               
+              
+        
+            </select>
+        
+    </div>
+    
+ <!--USEDAREA   -->
+    <div class="input-group mb3 form-group ">
+        <div class="input-group-prepend">
+            <label class="input-group-text" for="inputGroupSelect04">Used Area</label>
+        </div>
+        
+            <select class="form-group custom-select" id="inputGroupSelect04" name="device[usedin]">
+                <%usedarea.forEach(function(usedarea){%>
+                    <option value=<%=usedarea._id%>><%=usedarea.name%></option>      
+                <%})%>
+              
+        
+            </select>
+        
+    </div>
+    
+    
+  <!--COMMENTS   -->   
+    <div class="form-group">
+    <input class="form-control" type="text" name="device[comments]" placeholder="Comments">
+    </div>
+
     <div class="form-group">
     <button class="form-control btn btn-primary btn-lg" type="submit">Submit</button>
     </div>
