--- a/views/devices.ejs
+++ b/views/devices.ejs
@@ -6,15 +6,15 @@
     <th scope="col">Name</th>
     <th scope="col">1c</th> 
     <th scope="col" >Owner</th>
-    <th scope="col">Used By</th>
+    <th scope="col">Used Area</th>
   </tr>
 <%devices.forEach(function(dev){ %>
  
  <tr>
     <td><%=dev.name%></td>
-    <td><%=dev.onecno%></td> 
-    <td><%=dev.owner%></td>
-    <td><%=dev.usedby.name%></td>
+    <td><%=dev.onecid%></td> 
+    <td><%=dev.owner.name%></td>
+    <td><%=dev.usedin.name%></td>
     <form method="DELETE">
     <td><button class="btn btn-primary btn-sm" method="DELETE" type="submit" formaction="/devices/delete/<%=dev._id%>" >Delete</button></td></form>
   </tr>
