--- a/views/partials/printheader.ejs
+++ b/views/partials/printheader.ejs
@@ -1,14 +1,36 @@
 <html>
 <head>
+    
+    <style>
+     body{
+
+    padding: 2cm;
+    margin: 1cm ;
+    border: 5px #000000 solid;
+    border-radius: 5px;
+    background: white;
+    }
+    p{
+        font-size:24px;
+    }
+    @media print {
+	
+	#printpagebutton{
+		display: none;
+	}
+
+  /* ... the rest of the rules ... */
+    }
+        
+    </style>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Picker Devices</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
 	<script src="gallery.js"></script>
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="app.css">
 </head>
 <body>
@@ -16,7 +38,8 @@
 <nav class="navbar navbar-light bg-light fixed-top">
 <a class="navbar-brand" href="/">Device Records</a>
 
-
+    
+<div > 
 
     <ul class="nav navbar-expand-sm  nav-pills navbar-right">
         <li class="nav-item dropdown" >
@@ -44,9 +67,11 @@
             <a class="nav-link" href="/logout">LogOut</a>
         </li>
     </ul>
+</div> 
 
 
 </nav>
+<img style="float:left" src="/images/awok.jpg" alt="Trulli" width="138" height="41" ><h2  style="text-align:center;float:center;clear:left;"><strong>AWOK.com </strong></h2>
 
+<h3 style="text-align:center;text-decoration: underline;">Request From</h3>
 
-<div class="container ">
