--- a/public/app.css
+++ b/public/app.css
@@ -15,6 +15,10 @@ body{
         text-align: center;
     }
 }
+
+.nav a{
+	color: black;
+}
 .carousel-item{
 	width: 100%;
 	margin: auto;
@@ -129,4 +133,19 @@ img {
 	text-align: center;
 	align-items: center;
 
+}
+@page {
+  size: A4;
+  margin: 0;
+}
+@media print {
+	
+	#printpagebutton{
+		display: none;
+	}
+  html, body {
+    width: 210mm;
+    height: 297mm;
+  }
+  /* ... the rest of the rules ... */
 }
